cleaning code and warnings